--- a/src/components/pageProfile/cardMain/style.module.scss
+++ b/src/components/pageProfile/cardMain/style.module.scss
@@ -1,8 +1,6 @@
 .cardMain {
     display: flex;
-    flex-direction: column;
     gap: 10px;
-    max-width: 320px;
     border-radius: 20px;
     background: #383752;
     align-items: center;
@@ -11,6 +9,7 @@
     margin: auto;
     position: relative;
     width: 100%;
+    flex-wrap: wrap;
 
     & .avatar {
         & img {
@@ -38,6 +37,7 @@
         position: absolute;
         top: 16px;
         right: 16px;
+
         & img {
             display: block;
             width: 32px;
