--- a/src/components/Auth/style.module.scss
+++ b/src/components/Auth/style.module.scss
@@ -26,10 +26,10 @@
 
 .main {
 
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    // position: fixed;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
 
     background-color: #383752;
     padding: 16px;
