--- a/src/components/pageNotes/notes/style.module.scss
+++ b/src/components/pageNotes/notes/style.module.scss
@@ -129,11 +129,51 @@
         padding-top: 16px;
         padding-bottom: 24px;
 
-        & .back {
-            cursor: pointer;
-            width: auto;
-            height: 24px;
+        & .custom {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+
+            & .back {
+                cursor: pointer;
+                width: auto;
+                height: 24px;
+            }
+
+            & .error {
+
+                & img {
+                    width: 24px;
+                    height: 24px;
+                    cursor: pointer;
+                }
+
+                & .errorHover {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    left: 40px;
+                    top: 40px;
+
+                    background-color: #1b1b2c;
+                    border-radius: 10px;
+                    width: 150px;
+                    max-height: 100px;
+                    padding: 8px;
+                    color: #ab7575;
+                    text-align: center;
+                    font-family: Montserrat Alternates;
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: normal;
+                }
+
+            }
         }
+
+
     }
 
     & .write {
