--- a/src/components/mopik/style.module.scss
+++ b/src/components/mopik/style.module.scss
@@ -144,6 +144,12 @@
             }
         }
 
+        & .moot img {
+            width: 25px;
+            height: auto;
+            cursor: pointer;
+        }
+
         & .comment img {
             width: 30px;
             height: auto;
