--- a/src/components/Auth/style.module.scss
+++ b/src/components/Auth/style.module.scss
@@ -23,6 +23,15 @@
 //     border-radius: 15px;
 
 //     padding: 16px;
+.linkPolicy {
+    color: #B7B7BD;
+    margin: auto;
+    font-family: Montserrat Alternates;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    cursor: pointer;
+}
 
 .main {
 
