--- a/src/components/pageNotes/notes/style.module.scss
+++ b/src/components/pageNotes/notes/style.module.scss
@@ -141,6 +141,15 @@
                 height: 24px;
             }
 
+            & .dateCreate {
+                color: #B7B7BD;
+                font-family: Verdana;
+                font-size: 10px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+            }
+
             & .error {
 
                 & img {
