--- a/src/components/pageAbout/sectionWork/style.module.scss
+++ b/src/components/pageAbout/sectionWork/style.module.scss
@@ -89,6 +89,15 @@
     }
 }
 
+@media only screen and (max-width: 767px) {
+    .sectionWork {
+        & .listMy {
+            padding: 0px 16px;
+        }
+    }
+
+}
+
 @media only screen and (min-width: 767px) {
     .sectionWork .title p {
         font-size: 24px;
@@ -106,6 +115,7 @@
             font-size: 20px;
         }
     }
+
 }
 
 @media only screen and (min-width: 1024px) {
